# tree-sitter-animationtxt

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  animation.txt  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  redo.sh  setup.py  tree-sitter.json
.zed/: tasks.json
bindings/c/: tree-sitter-animationtxt.pc.in  tree-sitter-playdateanimation.pc.in
bindings/c/tree_sitter/: tree-sitter-animationtxt.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_animationtxt/: __init__.py  binding.c
bindings/python/tree_sitter_playdateanimation/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPlaydateanimation/: playdateanimation.h
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: animation.txt  example.txt
